--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="assets/css/styles.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -20,22 +22,81 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-xs-6 col-6 col-md-3 col-lg-3 col-xl-3 principle-container">
-              <img src="assets/img/liveable.png" class="img-fluid principles">
+            <div class="col">
+                <h4>DHAALU ATOLL</h4>
+                <p>Dhaalú Atoll is one of the atolls of the Maldives. It corresponds to the natural atoll of the same name. Dhaalu Atoll stretches 23km (14 mi) from east to west, and 38km (24 mi) north to south. Out of a total of 56 islands in the atoll, six of the islands are inhabited, with a total population of around 10,635. The capital island is Kudahuvadhoo, located at the atoll's southern tip.
+                </p>
+                <p>Dhaalu Atoll is accessible through regular domestic flights from Velana International Airport to Dhaalu Airport located on Kudahuvadhoo as well as local ferry services.
+                </p>
+                <p>The atoll is home to several luxury tourist resorts including St Regis Vommuli Maldives, Niyama Private Islands Maldives, Kandima Maldives, Angsana Velavaru, Vilu Reef, and RIU Palace.</p>
             </div>
-            <div class="col-sm-6 col-xs-6 col-6 col-md-3 col-lg-3 col-xl-3 principle-container">
-                <img src="assets/img/green.png" class="img-fluid principles">
-            </div>
-            <div class="col-sm-6 col-xs-6 col-6 col-md-3 col-lg-3 col-xl-3 principle-container">
-                <img src="assets/img/fair.png" class="img-fluid principles">
-            </div>
-            <div class="col-sm-6 col-xs-6 col-6 col-md-3 col-lg-3 col-xl-3 principle-container">
-                <img src="assets/img/smart.png" class="img-fluid principles">
-            </div>
-          </div>
+        </div>
     </div>
     <div class="container">
-        <p class="copyright">© 2020 Reseum</p>
+        <div class="row">
+            <div class="col">
+                <h4 class="ulhun-h">ULHUN DHAALU</h4>
+                <h1>A PUBLIC PRIVATE PARTNERSHIP THAT AIMS TO MAKE DHAALU THE MOST LIVEABLE ATOLL IN THE MALDIVES</h1>
+                <p>The ULHUN DHAALU initiative was founded by the Dhaalu Kudahuvadhoo Local Government and Reseum, with the aim of making Dhaalu Atoll the most liveable atoll in the Maldives. The project leverages international and local collaborative partnerships, to work together to achieve rapid development and raising the quality of life in the islands.</p>
+                <h5>BECOMING A MODEL ATOLL FOR THE REST OF THE MALDIVES</h5>
+                <p>We aim to make ULHUN DHAALU an inspiration for the rest of the Maldivian atolls. </p>
+                <h5>OUR PRINCIPLES</h5>
+                <p>We follow four basic principles to achieve our goals.</p>
+            </div>
+            <div class="container principles">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-2 principle-img-container">
+                                <img class="img-fluid principle-img" src="assets/img/smart.png">
+                            </div>
+                            <div class="col-10">
+                                <h6>SMART</h6>
+                                <p class="principle-desc">USING DIGITAL TECHNOLOGIES TO DESIGN A FUTURISTIC SOCIETY</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-2 principle-img-container">
+                                <img class="img-fluid principle-img" src="assets/img/green.png">
+                            </div>
+                            <div class="col-10 col-xs-12">
+                                <h6>GREEN</h6>
+                                <p class="principle-desc">CREATING CLIMATE POSITIVE AND RESILIENT COMMUNITIES</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-2 principle-img-container">
+                                <img class="img-fluid principle-img" src="assets/img/fair.png">
+                            </div>
+                            <div class="col-10">
+                                <h6>FAIR</h6>
+                                <p class="principle-desc">EMPOWERING THROUGH ACCESSIBLE AND SECURE FINANCIAL ECOSYSTEMS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-2 principle-img-container">
+                                <img class="img-fluid principle-img" src="assets/img/liveable.png">
+                            </div>
+                            <div class="col-10">
+                                <h6>LIVEABLE</h6>
+                                <p class="principle-desc">RAISING THE QUALITY OF LIFE BY CREATING POSITIVE AND SUPPORTIVE SOCIAL ENVIRONMENTS</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container">
+        <p class="copyright">© 2020 RESEUM</p>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
