--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
                 <p>Dhaalu Atoll is accessible through regular domestic flights from Velana International Airport to Dhaalu Airport located on Kudahuvadhoo as well as local ferry services.
                 </p>
-                <p>The atoll is home to several luxury tourist resorts including St Regis Vommuli Maldives, Niyama Private Islands Maldives, Kandima Maldives, Angsana Velavaru, Vilu Reef, and RIU Palace.</p>
+                <p>The atoll is home to several luxury tourist resorts including St Regis Vommuli Maldives, Niyama Private Islands Maldives, Baglioni Resort, Kandima Maldives, Angsana Velavaru, Vilu Reef, and RIU Palace.</p>
             </div>
         </div>
     </div>
