updated to Dhaalu

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1>A PUBLIC PRIVATE PARTNERSHIP THAT AIMS TO MAKE DHAALU THE MOST LIVEABLE ATOLL IN THE MALDIVES</h1>
                 <p>The ULHUN DHAALU initiative was founded by the Dhaalu Kudahuvadhoo Local Government and Reseum, with the aim of making Dhaalu Atoll the most liveable atoll in the Maldives. The project leverages international and local collaborative partnerships, to work together to achieve rapid development and raise the quality of life in the islands.</p>
                 <h5>BECOMING A MODEL ATOLL FOR THE REST OF THE MALDIVES</h5>
-                <p>We aim to make ULHUN DHAALU an inspiration for the rest of the Maldivian atolls. </p>
+                <p>We aim to make DHAALU an inspiration for the rest of the Maldivian atolls. </p>
                 <h5>OUR PRINCIPLES</h5>
                 <p>We follow four basic principles to achieve our goals.</p>
             </div>
