added more content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,122 @@
                     </div>
                 </div>
             </div>
-
+            <div class="container projects">
+                <h5 class="projects-h">PROJECTS</h5>
+                <p>We apply these principles to individual projects that collectively aim to achieve the overall vision of ULHUN.</p>
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/digital.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>DIGITAL INFRASTRUCTURE</h6>
+                                <p class="principle-desc">An inter-island digital network built on Blockchain.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/urban.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>SUSTAINABLE URBAN DESIGN</h6>
+                                <p class="principle-desc">An urban design that promotes a sustainable infrastructure and local economic system.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/nature.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>NATURE CONSERVATION</h6>
+                                <p class="principle-desc">Initiatives for and making natural habitats more resilient.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/campus.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>INNOVATION CAMPUS</h6>
+                                <p class="principle-desc">An innovation center with advanced R&D, training, co-working and living facilities.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/transport.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>ZERO EMISSION TRANSPORTATION NETWORK</h6>
+                                <p class="principle-desc">Connected zero-emission transportation network.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/food.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>LOCAL FOOD PRODUCTION</h6>
+                                <p class="principle-desc">Urban farming systems for producing food locally.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/energy.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>RENEWABLE ENERGY & ZERO WASTE</h6>
+                                <p class="principle-desc">Decentralized renewable energy and water production systems that contribute to achieving zero waste solutions.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/sports.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>SPORTS CENTER</h6>
+                                <p class="principle-desc">A sports center with training and recreational facilities.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/park.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>PUBLIC SPACES</h6>
+                                <p class="principle-desc">Parks and public spaces that promote healthy lifestyles.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="img-fluid project-img" src="assets/img/economy.jpg">
+                            </div>
+                            <div class="col-12">
+                                <h6>A NEW KIND OF LOCAL ECONOMY</h6>
+                                <p class="principle-desc">Financing programs and incubators that foster local entrepreneurship and small businesses.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
