--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col">
                 <h4 class="ulhun-h">ULHUN DHAALU</h4>
-                <h1>A PUBLIC PRIVATE PARTNERSHIP THAT AIMS TO MAKE DHAALU THE MOST LIVEABLE ATOLL IN THE MALDIVES</h1>
+                <h1>A PUBLIC-PRIVATE PARTNERSHIP THAT AIMS TO MAKE DHAALU THE MOST LIVEABLE ATOLL IN THE MALDIVES</h1>
                 <p>The ULHUN DHAALU initiative was founded by the Dhaalu Kudahuvadhoo Local Government and Reseum, with the aim of making Dhaalu Atoll the most liveable atoll in the Maldives. The project leverages international and local collaborative partnerships, to work together to achieve rapid development and raise the quality of life in the islands.</p>
                 <h5>BECOMING A MODEL ATOLL FOR THE REST OF THE MALDIVES</h5>
                 <p>We aim to make DHAALU an inspiration for the rest of the Maldivian atolls. </p>
@@ -208,6 +208,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="container logos-container">
+        <img class="img-fluid logos" src="assets/img/logos.png">
     </div>
 
     <div class="container">
