--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="container projects">
                 <h5 class="projects-h">PROJECTS</h5>
-                <p>We apply these principles to individual projects that collectively aim to achieve the overall vision of ULHUN.</p>
+                <p>We apply the four principles to individual projects that collectively aim to achieve the overall vision of ULHUN.</p>
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12 principle-block">
                         <div class="row">
@@ -124,7 +124,7 @@
                             </div>
                             <div class="col-12">
                                 <h6>NATURE CONSERVATION</h6>
-                                <p class="principle-desc">Initiatives for and making natural habitats more resilient.</p>
+                                <p class="principle-desc">Initiatives for making natural habitats more resilient.</p>
                             </div>
                         </div>
                     </div>
